<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/TextInputLayoutOutlinedBoxCorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/txt_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_date_range_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dropdown"
        style="@style/TextInputLayoutOutlinedBoxDropdownCorner.Position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_choose_vehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_fire_truck_24">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_dropdown"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_note"
            style="@style/TextInputLayoutOutlinedBoxCorner.Position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/txt_complaint_note"
            app:startIconDrawable="@drawable/ic_assignment_24"
            app:startIconTint="@color/white"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/til_note"
            android:layout_alignTop="@+id/til_note"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_assignment_24"
            app:tint="@color/default_icon" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView9"
        style="@style/Text.Title.Content.Position"
        android:layout_marginTop="10dp"
        android:text="@string/txt_document_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_icon"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_48"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:tint="@color/grey_status" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_photo"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Ambil Foto"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
        app:layout_constraintStart_toEndOf="@+id/iv_photo"
        app:layout_constraintTop_toTopOf="@+id/iv_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/gray_600"
        android:text="@string/txt_send_report"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>