<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_main"
        style="@style/BottomCornersRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:translationZ="8dp"
        app:shapeAppearanceOverlay="@style/BottomCornersRounded">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_fleetify"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_icon"
                android:padding="6dp"
                android:src="@drawable/ic_search_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_main_report_vehicle_complaints"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/tv_user_fullname"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        style="@style/TextInputLayoutOutlinedBoxDropdownCorner.Position"
        android:layout_width="match_parent"
        android:layout_below="@+id/cv_main"
        android:layout_height="wrap_content"
        android:hint="@string/txt_choose_vehicle"
        android:layout_marginHorizontal="20dp"
        app:startIconDrawable="@drawable/ic_fire_truck_24">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cv_bottom_container"
        android:layout_below="@id/cv_main"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/item_complaints" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:paddingVertical="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_add_complaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/gray_600"
            android:text="@string/txt_button_add__complaints"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />


    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>